# Langtons-ant-raylib

./: CMakeLists.txt
src/: game.cpp
